--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "build:ward:rules": "fireward -i fireward/firestore.ward > fireward/firestore.rules",
+    "build:ward:types": "fireward -i fireward/firestore.ward --lang=typescript > types/FirestoreTypes.d.ts",
+    "build:ward": "yarn run build:ward:rules && yarn run build:ward:types",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -13,8 +16,12 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/i18n": "^8.0.0-beta.9",
+    "@tailwindcss/forms": "^0.5.3",
+    "firebase-tools": "^11.28.0",
+    "fireward": "^2.0.19",
     "nuxt": "^3.2.0",
-    "nuxt-icon": "^0.2.11"
+    "nuxt-icon": "^0.2.11",
+    "typescript": "4.9"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.4.0",
