--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "typescript": "4.9"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.13",
     "@nuxtjs/tailwindcss": "^6.4.0",
     "firebase": "^9.18.0",
     "nuxt-vuefire": "^0.1.6",
+    "vue-sonner": "^0.3.1",
     "vuefire": "^3.1.0"
   }
 }
