chore: add firebase deploy scripts chore: ignore firebase.rules file since we use fireward instead

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,8 @@
 {
   "firestore": {
     "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "indexes": "firestore.indexes.json",
+    "predeploy": "yarn run build:ward"
   },
   "hosting": {
     "public": ".output/public",
@@ -9,7 +10,8 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "predeploy": "yarn run generate"
   },
   "storage": {
     "rules": "storage.rules"
