--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build:ward:rules": "fireward -i firestore.ward > firestore.rules",
     "build:ward:types": "fireward -i firestore.ward --lang=typescript > types/FirestoreTypes.d.ts",
     "build:ward": "yarn run build:ward:rules && yarn run build:ward:types",
+    "deploy": "firebase deploy",
+    "deploy:firestore": "firebase deploy --only firestore:rules,firestore:indexes",
+    "deploy:firestore-indexes": "firebase deploy --only firestore:indexes",
+    "deploy:firestore-rules": "firebase deploy --only firestore:rules",
+    "deploy:hosting": "firebase deploy --only hosting",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
