--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
     "@nuxtjs/tailwindcss": "^6.4.0",
+    "@pinia/nuxt": "^0.4.9",
+    "class-validator": "^0.14.0",
     "firebase": "^9.18.0",
+    "fireorm": "^0.23.3",
     "nuxt-vuefire": "^0.1.6",
+    "pinia": "^2.0.35",
+    "reflect-metadata": "^0.1.13",
     "vue-sonner": "^0.3.1",
     "vuefire": "^3.1.0"
-  }
+  },
+  "packageManager": "yarn@3.5.1"
 }
