--- a/firebase.json
+++ b/firebase.json
@@ -6,5 +6,28 @@
   },
   "storage": {
     "rules": "storage.rules"
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"]
+    }
+  ],
+  "emulators": {
+    "firestore": {
+      "port": 9090
+    },
+    "ui": {
+      "enabled": true,
+      "port": 9091
+    },
+    "singleProjectMode": true
   }
 }
