--- a/package.json
+++ b/package.json
@@ -12,33 +12,48 @@
     "deploy:firestore": "firebase deploy --only firestore:rules,firestore:indexes",
     "deploy:firestore-indexes": "firebase deploy --only firestore:indexes",
     "deploy:firestore-rules": "firebase deploy --only firestore:rules",
+    "deploy:functions": "firebase deploy --only functions",
+    "emulators:start": "firebase emulators:start --only firestore",
+    "format": "prettier --write .",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@enxg/prettier-config": "^1.1.0",
+    "@nuxt/devtools": "^0.8.0",
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/i18n": "^8.0.0-beta.9",
     "@tailwindcss/forms": "^0.5.3",
+    "@vueuse/nuxt": "^10.1.2",
     "firebase-tools": "^11.28.0",
     "fireward": "^2.0.19",
     "nuxt": "^3.2.0",
     "nuxt-icon": "^0.2.11",
+    "prettier": "^3.0.2",
     "typescript": "4.9"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
+    "@nuxtjs/algolia": "^1.7.0",
     "@nuxtjs/tailwindcss": "^6.4.0",
     "@pinia/nuxt": "^0.4.9",
+    "@vueuse/components": "^10.1.2",
+    "@vueuse/core": "^10.1.2",
     "class-validator": "^0.14.0",
     "firebase": "^9.18.0",
     "fireorm": "^0.23.3",
+    "isbn3": "^1.1.41",
     "nuxt-vuefire": "^0.1.6",
     "pinia": "^2.0.35",
     "reflect-metadata": "^0.1.13",
     "vue-sonner": "^0.3.1",
     "vuefire": "^3.1.0"
   },
-  "packageManager": "yarn@3.5.1"
+  "workspaces": [
+    "functions"
+  ],
+  "packageManager": "yarn@3.5.1",
+  "prettier": "@enxg/prettier-config"
 }
